// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditBedTag Should display add edit bed tag form properly 1`] = `
<div
  className="form-container"
>
  <fieldset
    className="bed-tag-form"
  >
    <legend>
       
       
      Add
       
      Bed Tag
        
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name
            :
          </label>
          <input
            id="name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;

exports[`AddEditBedTag Should display add edit bed tag form properly 2`] = `
<div
  className="form-container"
>
  <fieldset
    className="bed-tag-form"
  >
    <legend>
       
       
      Edit
       
      Bed Tag
        
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name
            :
          </label>
          <input
            id="name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value="Isolation"
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;
